change swagger spec
